--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
 		}
 	],
 	"require" : {
-		"doctrine/dbal" : "doctrine/dbal@stable"
+		"doctrine/dbal" : "doctrine/dbal@stable",
 		"amylian/amylian-doctrine-dbal" : "dev-master@dev"
 	},
 	"require-dev" : {
@@ -25,12 +25,12 @@
 	},
 	"autoload" : {
 		"psr-4" : {
-			"Amylian\\Doctrine\\DBAL" : "src/"
+			"Amylian\\Doctrine\\DBAL\\" : "src/"
 		}
 	},
 	"autoload-dev" : {
 		"psr-4" : {
-			"Amylian\\Doctrine\\DBAL\\Tests" : "tests/"
+			"Amylian\\Doctrine\\DBAL\\Tests\\" : "tests/"
 		}
 	}
 }
